--- a/HandwrittingRecognition/HandwrittingRecognition.csproj
+++ b/HandwrittingRecognition/HandwrittingRecognition.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BmpProcesser.cs" />
     <Compile Include="CenterLearning.cs" />
+    <Compile Include="CountLearning.cs" />
     <Compile Include="DigitsToNumbersLogic.cs" />
     <Compile Include="Distances.cs" />
     <Compile Include="Form1.cs">
@@ -60,6 +61,7 @@
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Saver.cs" />
     <Compile Include="SimpleLearning.cs" />
     <Compile Include="Vector.cs" />
     <EmbeddedResource Include="Form1.resx">
