--- a/HandwrittingRecognition/HandwrittingRecognition.csproj
+++ b/HandwrittingRecognition/HandwrittingRecognition.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="HandwrittenDigit.cs" />
     <Compile Include="LBPLearning.cs" />
+    <Compile Include="ILearner.cs" />
     <Compile Include="LearningProcedures.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
