--- a/HandwrittingRecognition/HandwrittingRecognition.csproj
+++ b/HandwrittingRecognition/HandwrittingRecognition.csproj
@@ -58,7 +58,9 @@
     <Compile Include="HandwrittenDigit.cs" />
     <Compile Include="LBPLearning.cs" />
     <Compile Include="ILearner.cs" />
+    <Compile Include="Learner.cs" />
     <Compile Include="LearningProcedures.cs" />
+    <Compile Include="NeuralNetwork.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
