--- a/HandwrittingRecognition/HandwrittingRecognition.csproj
+++ b/HandwrittingRecognition/HandwrittingRecognition.csproj
@@ -47,7 +47,7 @@
     <Compile Include="BmpProcesser.cs" />
     <Compile Include="CenterLearning.cs" />
     <Compile Include="CountLearning.cs" />
-    <Compile Include="DigitsToNumbersLogic.cs" />
+    <Compile Include="SymbolsToWordsLogic.cs" />
     <Compile Include="Distances.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,7 +55,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HandwrittenDigit.cs" />
+    <Compile Include="HandwrittenSymbol.cs" />
+    <Compile Include="HandwrittenWord.cs" />
     <Compile Include="LBPLearning.cs" />
     <Compile Include="ILearner.cs" />
     <Compile Include="Learner.cs" />
@@ -65,9 +66,11 @@
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recognition.cs" />
     <Compile Include="Saver.cs" />
     <Compile Include="SimpleLearning.cs" />
     <Compile Include="Vector.cs" />
+    <Compile Include="WordDB.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -80,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram3.cd" />
+    <None Include="ClassDiagram4.cd" />
+    <None Include="ClassDiagram5.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
